<resources>
    <string name="app_name">LivelyPencil</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="login">Login</string>
    <string name="join_us">Join Us</string>
    <string name="continue_tour">Continue Tour</string>
    <string name="hello">Hello :)</string>
    <string name="main_text1">"Thank you for installng me. I was desgned for you to add new white pages to your social life. "</string>
    <string name="main_text2">"I have all the tools for you to share whatever is on your mind, whatever is happening in the world, whenever you want. "</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="sur_name">Surname</string>
    <string name="phone_or_mail_address">Phone Or Mail Address</string>
    <string name="next">Next</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="passcode_message">It may take time for the confirmation code to arrive. If the code does not arrive, you can temporarily skip this step.</string>
    <string name="confirm">Confirm</string>
    <string name="skip">Skip</string>
    <string name="attention_please">Attention Please</string>
    <string name="attention_please_text">Your profile photo is public. Our communty gudelines; It cares that our 13-18 age group users do not encounter inappropriate content and images. Please note that otherwise your account may be permanently deleted.</string>
    <string name="camera">Camera</string>
    <string name="browse">Browse</string>
    <string name="lbl_set_profile_photo">Add Photo</string>
    <string name="lbl_take_camera_picture">Take Photo</string>
    <string name="lbl_choose_from_gallery">Choose From Gallery</string>
    <string name="stream">Stream</string>
    <string name="stream2">Stream :</string>
    <string name="stream_name">Stream Name</string>
    <string name="set_stream_cover">Set Stream Cover</string>
    <string name="private_message">If select private show only followeres</string>
    <string name="categories">Categories</string>
    <string name="catagries_you_are_intrested_in">Categories you are intrested in</string>
    <string name="finish">FINISH</string>
    <string name="set_password">Set Password</string>
    <string name="password">Password</string>
    <string name="empty_field">This field can not be blank.</string>
    <string name="lively_pencil">Lively Pencil</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Private">Private</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userprofilename">Lena Wilson</string>
    <string name="date">22/04/2021 11:09 pm updated</string>
    <string name="new11">235 Pages +2 new</string>
    <string name="new1">348 Pages +2 new</string>
    <string name="personal_information">Personal Information Settings</string>
    <string name="contact_information">Contact Information Settings</string>
    <string name="language_settings">Language Settings</string>
    <string name="personalization_privacy">Personalization, Privacy</string>
    <string name="stream_setting">Stream Settings</string>
    <string name="stream_pages_setting">Stream Pages Settings</string>
    <string name="share_setting">Share Settings</string>
    <string name="tv_channel_setting">TV Channel Settings</string>
    <string name="radio_channel_setting">Radio Channel Settings</string>
    <string name="ads_setting">ADS Settings</string>
    <string name="game_setting">Game Settings</string>
    <string name="api_setting">API Settings</string>
    <string name="birth_date">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="custom">Custom</string>
    <string name="location">Location</string>
    <string name="relationship">Relationship</string>
    <string name="married">Married</string>
    <string name="single">Single</string>
    <string name="about_me">About Me</string>
    <string name="about_me_sample">On 7 May 2019, Google announced that the Kotlin programming language is now its preferred language for Android app developers.[7] Since the release of Android Studio 3.0 in October 2017, Kotlin has been included as an alternative to the standard Java compiler. The Android Kotlin compiler produces Java 8 bytecode by default (which runs in any later JVM), but lets the programmer choose to target Java 9.</string>
    <string name="e_mail">E-Mail</string>
    <string name="approved">Approved</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="personalization_privacy_setting">Personalization Privacy Settings</string>
    <string name="profile">Profile</string>
    <string name="friend_request">Friend request</string>
    <string name="messaging">Messaging</string>
    <string name="mail_box">Mail box</string>
    <string name="tv_channel">TV Channel</string>
    <string name="radio_channel">Radio Channel</string>
    <string name="photo">Photos</string>
    <string name="activities">Activities</string>
    <string name="phone_number">Phone Number</string>
    <string name="web_url">Web Url</string>
    <string name="my_static">My Static</string>
    <string name="save_change">Save Change</string>
    <string name="username">Username</string>
    <string name="edit">Edit</string>
    <string name="stream_cover">Stream Cover</string>
    <string name="about_stream">About Stream</string>
    <string name="font_type">Font Type</string>
    <string name="font_color">Font Color</string>
    <string name="nameColor">Name Color</string>
    <string name="background">Background</string>
    <string name="folloe_request">Follow Request</string>
    <string name="comment">Comments</string>
    <string name="page_sharing">Page Sharing</string>
    <string name="allow_citation">Allow Citation</string>
    <string name="topic">Topic</string>
    <string name="age_group">Age Group</string>
    <string name="other_tags">Other Tags</string>
    <string name="tag">"#Book  #Learning  #Mathematics "</string>
    <string name="tv_logo">TV Logo</string>
    <string name="tv_logo_decriptions">We accept file type 500x500px png, jpg .</string>
    <string name="tv_cover">TV Cover</string>
    <string name="tv_cover_decription">We accept 1024x1024px png, jpg file type.</string>
    <string name="radio_logo">Radio Logo</string>
    <string name="radio_cover">Radio Cover</string>
    <string name="terms_conditions">Terms Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="create_story">Create Story</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="stream_name2">Sport Magazine</string>
    <string name="page2">Page :</string>
    <string name="select_topic">Select Topic</string>
    <string name="select_age_group">Select Age</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="textColor">Text Color</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="date2">Date</string>
    <string name="clear_all">Clear All</string>
    <string name="userId">\@LieaonWilson/5689</string>
    <string name="retry">Retry</string>
    <string name="recover_password">Recovery Password</string>
    <string name="with_email">With E-Mail</string>
    <string name="with_phone">With Phone</string>
    <string name="request_code">Request Code</string>
    <string name="help_page">Help Pages</string>
    <string name="support">Support</string>
    <string name="title_activity_support">SupportActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_surname">Name Surname</string>
    <string name="aboout_what">About What?</string>
    <string name="mail_address">Mail Address</string>
    <string name="send">Send</string>
    <string name="attatchment">Attachment file</string>
    <string name="help">Help</string>
    <string name="page">Pages</string>
    <string name="help_topics">Help Topics</string>
    <string name="what_is_lp">What is Lively Pencil?</string>
    <string name="using_feature">Using Features</string>
    <string name="accessbility_feature">Accessbility features</string>
    <string name="community_guidline">Community Guidelines</string>
    <string name="privacy_security">Privacy Security</string>
    <string name="live_market_help">Live Market Help</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="submit_a_question">Submit a Question</string>
    <string name="title_activity_help_page_details">HelpPageDetailsActivity</string>
    <string name="try_again">Try Again</string>
    <string name="there_is">There is</string>
    <string name="no_connection">no connection</string>
    <string name="choosing_language">Choosing Language</string>
    <string name="title_activity_support_submit_form">SupportSubmitFormActivity</string>
    <string name="message_sent">Message Sent</string>
    <string name="support_message">"We will try to reply to\nyour message as soon\nas possible."</string>
    <string name="dummy_long_text">"Whether it be bribery, getting a desired day in court, or any sort of unjust practice to sway the results of a trial, India’s judicial system remains as one riddled with corruption from many sides. Lawyers, administrative staff, judges, defendants, and more have used these practices to sway countless cases, and exist at all levels of the court system. While the Indian Supreme Court is generally reserved for the cases of highest importance or urgency, because of petitions and the implementation of bribery, the public or individuals outside the Supreme Court have been able to decide what cases go to the highest court of law in India. At least at the High Court level, one step below the Supreme Court, corrupt judges can be impeached under the Judges inquiry Act of 1968, but have to have support of at least 100 members of the Lok Sabha or 50 members of the Upper House of Parliament, or Rajya Sabha.Whether it be bribery, getting a desired day in court, or any sort of unjust practice to sway the results of a trial, India’s judicial system remains as one riddled with corruption from many sides. Lawyers, administrative staff, judges, defendants, and more have used these practices to sway countless cases, and exist at all levels of the court system. While the Indian Supreme Court is generally reserved for the cases of highest importance or urgency, because of petitions and the implementation of bribery, the public or individuals outside the Supreme Court have been able to decide what cases go to the highest court of law in India. At least at the High Court level, one step below the Supreme Court, corrupt judges can be impeached under the Judges inquiry Act of 1968, "</string>
    <string name="game_help">Game Help</string>
    <string name="api_information">Api Information</string>
    <string name="forgot_password_hint">enter 10 digit without zero</string>
    <string name="recover_password_text">Please enter the email or phone number \n associated with your account.</string>
    <string name="close">Close</string>
    <string name="error_otp_message">Invalid verification code. Please check the submitted code.</string>
</resources>