<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundWhite"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tutorial_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHeight_percent="0.65"

    >

        <androidx.appcompat.widget.AppCompatImageView

            android:id="@+id/logoImageView"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.55"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_svg"

            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.3"

            app:srcCompat="@mipmap/ic_launcher" />


        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="gone"
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/hello"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:textColor="#253B80"
            android:textSize="@dimen/ultra_heading"
            android:textStyle="bold"

            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>




        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_text"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/main_text1"
            android:fontFamily="@font/raleway_medium"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/text_color"

            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintVertical_bias="0.42"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

        </androidx.appcompat.widget.AppCompatTextView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/main_text2"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="0dp"
            android:text="@string/main_text2"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/text_color"

            android:fontFamily="@font/raleway_medium"
            android:gravity="center"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.7"

            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatTextView>

        <TextView
            android:id="@+id/countinue_tour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="#0939FF"
            android:textSize="@dimen/text_heading"
            android:textStyle="bold"
            android:text="@string/continue_tour"

            app:layout_constraintVertical_bias="0.85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:visibility="gone"

        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintWidth_percent="0.7"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/joinUsMovement"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_continue_credentials"
        android:gravity="center"
        android:text="@string/join_us"
        android:textAllCaps="false"
        android:textColor="@drawable/text_color"
        android:textStyle="bold"
        android:textSize="@dimen/text_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_bias="0.58"

        app:layout_constraintWidth_percent="0.7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginMovement"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_continue_credentials"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@drawable/text_color"
        android:textStyle="bold"
        android:textSize="@dimen/text_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_bias="0.68"
        app:layout_constraintWidth_percent="0.7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/forgot_password"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_bias="0.88"
        app:layout_constraintHeight_percent="0.1">


    </androidx.appcompat.widget.AppCompatTextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>



