<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Utility.HelpDetailsActivity">



        <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/stream_user_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/support_background_2">

    </androidx.appcompat.widget.AppCompatImageView>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"


            android:foregroundGravity="left"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHorizontal_bias="0"

            android:src="@drawable/solo_logo_svg_white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"


            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintVertical_bias="0.035"
            app:layout_constraintHorizontal_bias="1"

            android:src="@drawable/back_button_header"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            >

        </androidx.appcompat.widget.AppCompatImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintVertical_bias="0.18"

        android:text="@string/help"
        android:gravity="center_vertical"
        android:textSize="@dimen/_22sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway_medium"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintVertical_bias="0.23"


        android:text="@string/page"
        android:gravity="center_vertical"
        android:textSize="@dimen/_22sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway_medium"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.69"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintHeight_percent="0.69"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >



                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_20sdp"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="center_vertical"
                    android:text="@string/what_is_lp"
                    android:textColor="@color/settingEditBackgroundColor"
                    >

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/heading_details_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="center_vertical"
                    android:justificationMode="inter_word"
                    android:text="@string/dummy_long_text"
                    android:textColor="@color/text_color"
                    >

                </androidx.appcompat.widget.AppCompatTextView>

                <View

                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/text_color"
                    >

                </View>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:orientation="vertical"



                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"

                        android:textColor="@color/settingEditBackgroundColor"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/help_topics"
                        android:textSize="@dimen/_20sdp"
                        android:gravity="center_vertical"

                        >


                    </androidx.appcompat.widget.AppCompatTextView>
                    <View

                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_color"
                        >

                    </View>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/one"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"

                        android:text="@string/what_is_lp"
                        android:textSize="@dimen/_16sdp"
                        android:gravity="center_vertical"

                        android:fontFamily="@font/raleway_medium"
                        android:textColor="@color/text_color"


                        >


                    </androidx.appcompat.widget.AppCompatTextView>
                    <View
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_color"
                        >

                    </View>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"


                        android:fontFamily="@font/raleway_medium"

                        android:textColor="@color/text_color"

                        android:text="@string/using_feature"
                        android:textSize="@dimen/_16sdp"
                        android:gravity="center_vertical"

                        >


                    </androidx.appcompat.widget.AppCompatTextView>
                    <View

                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_color"
                        >

                    </View>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"


                        android:fontFamily="@font/raleway_medium"
                        android:textColor="@color/text_color"

                        android:text="@string/accessbility_feature"
                        android:textSize="@dimen/_16sdp"
                        android:gravity="center_vertical"

                        >


                    </androidx.appcompat.widget.AppCompatTextView>
                    <View

                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_color"
                        >

                    </View>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"

                        android:fontFamily="@font/raleway_medium"

                        android:textColor="@color/text_color"

                        android:text="@string/community_guidline"
                        android:textSize="@dimen/_16sdp"
                        android:gravity="center_vertical"

                        >


                    </androidx.appcompat.widget.AppCompatTextView>
                    <View

                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_color"
                        >

                    </View>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"

                        android:fontFamily="@font/raleway_medium"


                        android:textColor="@color/text_color"

                        android:text="@string/privacy_security"
                        android:textSize="@dimen/_16sdp"
                        android:gravity="center_vertical"

                        >


                    </androidx.appcompat.widget.AppCompatTextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_color"
                        >

                    </View>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="@font/raleway_medium"

                        android:textColor="@color/text_color"

                        android:text="@string/live_market_help"
                        android:textSize="@dimen/_16sdp"
                        android:gravity="center_vertical"

                        >


                    </androidx.appcompat.widget.AppCompatTextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_color"
                        >

                    </View>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"

                        android:fontFamily="@font/raleway_medium"


                        android:textColor="@color/text_color"

                        android:text="@string/terms_of_service"
                        android:textSize="@dimen/_16sdp"
                        android:gravity="center_vertical"


                        >


                    </androidx.appcompat.widget.AppCompatTextView>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_color"
                        >

                    </View>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"


                        android:textColor="@color/text_color"

                        android:text="@string/submit_a_question"
                        android:textSize="@dimen/_16sdp"
                        android:gravity="center_vertical"

                        android:fontFamily="@font/raleway_medium"

                        >


                    </androidx.appcompat.widget.AppCompatTextView>

                    <View

                        android:layout_width="match_parent"
                        android:layout_height="15dp"

                        >

                    </View>


                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>












</androidx.constraintlayout.widget.ConstraintLayout>